# SDL3-Rust-Demo-Game

./: .gitignore  Cargo.toml  LICENCE  README.md  build.rs  settings.toml
assets/: assets.json
assets/gui/: menu.json
assets/levels/: 1.json
src/: actions.rs  errors.rs  game.rs  game_assets.rs  game_data.rs  geometry.rs  main.rs  mouse.rs  settings.rs  util.rs
src/ecs/: component.rs  mod.rs  system.rs
src/game_object/: drawable.rs  mod.rs  world.rs
src/game_object/behaviour/: collision.rs  controllable.rs  dvd.rs  mod.rs  physics.rs
src/gui/: constraints.rs  mod.rs
src/math/: bounds.rs  mod.rs  vector2.rs  vector3.rs  vector4.rs
src/serialization/: behaviour.rs  font.rs  game.rs  level.rs  mod.rs  texture.rs
